--- a/index.html
+++ b/index.html
@@ -9,10 +9,18 @@
   </head>
   <body>
     <div class="container">
-      <nav></nav>
-      <section></section>
-      <aside></aside>
-      <footer></footer>
+      <nav>
+        <h1>1</h1>
+      </nav>
+      <section>
+<h1>2</h1>
+      </section>
+      <aside>
+<h1>3</h1>
+      </aside>
+      <footer>
+<h1>4</h1>
+      </footer>
     </div>
 
   </body>
